plugins {
    id 'com.jfrog.artifactory' version '4.9.0'
}

group = 'cordelia'
version = '1.2.6.RELEASE'

apply plugin: 'java'
apply plugin: 'com.jfrog.artifactory'
apply plugin: 'maven-publish'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    jcenter()
}

dependencies {
    // GSON and HttpClient
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    compile group: 'com.jcabi', name: 'jcabi-http', version: '1.17.2'
    compile group: 'javax.json', name: 'javax.json-api', version: '1.1.4'
    compile group: 'org.cactoos', name: 'cactoos', version: '0.38'

    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    //compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.2.11'
    //compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version:'2.2.11'
    //compile group: 'javax.activation', name: 'activation', version: '1.1.1'

    // Logging
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    // Test
    testCompile group: 'junit', name: 'junit', version: '4.+'
}

artifactory {
    contextUrl = "${artifactory_contextUrl}"
    publish {
        defaults {
            publications ('mavenJava')
        }
        repository {
            repoKey = 'libs-release-local'
            username = "${artifactory_user}"
            password = "${artifactory_password}"
            maven = true
        }
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}